begin character select grid

--- a/index.html
+++ b/index.html
@@ -4,11 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./src/styles/reset.css" />
     <link rel="stylesheet" href="./dist/main.css" />
+    <link rel="stylesheet" href="./src/styles/style.css" />
     <script src="./dist/main.js"></script>
     <title>Versus</title>
 </head>
 <body>
-    
+
+    <header>
+        <h1>Versus</h1>
+    </header>
+
+    <nav class="character-select">
+        <ul class="ul-character-select">
+            <li class="li-character-select"></li>
+            <li class="li-character-select"></li>
+            <li class="li-character-select"></li>
+            <li class="li-character-select"></li>
+            <li class="li-character-select"></li>
+            <li class="li-character-select"></li>
+            <li class="li-character-select"></li>
+            <li class="li-character-select"></li>
+        </ul>
+    </nav>
+
 </body>
 </html>
