add player background container

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </head>
 <body>
 
+    <div class="flex-box-col">
+
     <header>
         <h1>Versus</h1>
     </header>
@@ -28,6 +30,12 @@
             <li class="li-character-select"></li>
         </ul>
     </nav>
+
+    </div>
+    <div class="player-container">
+        <section class="player-side player-side-left"></section>
+        <section class="player-side player-side-right"></section>
+    </div>
 
 </body>
 </html>
