--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./src/styles/reset.css" />
     <link rel="stylesheet" href="./dist/main.css" />
     <link rel="stylesheet" href="./src/styles/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
     <script src="./dist/main.js"></script>
     <title>Versus</title>
 </head>
@@ -14,28 +17,28 @@
 
     <div class="flex-box-col">
 
-    <header>
-        <h1>Versus</h1>
-    </header>
+        <header>
+            <h1>VERSUS</h1>
+        </header>
 
-    <nav class="character-select">
-        <ul class="ul-character-select">
-            <li class="li-character-select"></li>
-            <li class="li-character-select"></li>
-            <li class="li-character-select"></li>
-            <li class="li-character-select"></li>
-            <li class="li-character-select"></li>
-            <li class="li-character-select"></li>
-            <li class="li-character-select"></li>
-            <li class="li-character-select"></li>
-        </ul>
-    </nav>
+        <nav class="player-select">
+            <ul class="ul-player-select">
+                <li class="li-player-select"></li>
+                <li class="li-player-select"></li>
+                <li class="li-player-select"></li>
+                <li class="li-player-select"></li>
+                <li class="li-player-select"></li>
+                <li class="li-player-select"></li>
+                <li class="li-player-select"></li>
+                <li class="li-player-select"></li>
+            </ul>
+        </nav>
 
     </div>
     <div class="player-container">
         <section class="player-side player-side-left"></section>
         <section class="player-side player-side-right"></section>
     </div>
-
+    
 </body>
 </html>
