add character select hover listener

--- a/index.html
+++ b/index.html
@@ -18,26 +18,22 @@
     <div class="flex-box-col">
 
         <header>
-            <h1>VERSUS</h1>
+            <h2>VERSUS</h2>
         </header>
 
         <nav class="player-select">
-            <ul class="ul-player-select">
-                <li class="li-player-select"></li>
-                <li class="li-player-select"></li>
-                <li class="li-player-select"></li>
-                <li class="li-player-select"></li>
-                <li class="li-player-select"></li>
-                <li class="li-player-select"></li>
-                <li class="li-player-select"></li>
-                <li class="li-player-select"></li>
+            <ul id="ul-player-select">
             </ul>
         </nav>
 
     </div>
     <div class="player-container">
-        <section class="player-side player-side-left"></section>
-        <section class="player-side player-side-right"></section>
+        <section class="player-side player-side-left">
+            <h1 id="left-player-name"></h1>
+        </section>
+        <section class="player-side player-side-right">
+            <h1 id="right-player-name"></h1>
+        </section>
     </div>
     
 </body>
