add toggle for left player

--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
     <div class="player-container">
         <section class="player-side player-side-left">
             <h1 id="left-player-name"></h1>
+            <h6 id="left-player-alias"></h6>
         </section>
         <section class="player-side player-side-right">
             <h1 id="right-player-name"></h1>
+            <h6 id="right-player-alias"></h6>
         </section>
     </div>
     
