--- a/index.html
+++ b/index.html
@@ -22,18 +22,23 @@
             <h2>VERSUS</h2>
         </header>
 
-        <nav class="player-select">
-            <ul id="ul-player-select">
-            </ul>
-        </nav>
+        <div class="player-select-wrapper">
+            <nav class="player-select">
+                <ul id="ul-player-select">
+                </ul>
+            </nav>
+            <div class="player-select-toggle">
+
+            </div>
+        </div>
 
     </div>
     <div class="player-container">
-        <section class="player-side player-side-left">
+        <section id="player-side-left" class="player-side">
             <h1 id="left-player-name"></h1>
             <h6 id="left-player-alias"></h6>
         </section>
-        <section class="player-side player-side-right">
+        <section id="player-side-right" class="player-side">
             <h1 id="right-player-name"></h1>
             <h6 id="right-player-alias"></h6>
         </section>
