--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
                 <ul id="ul-player-select">
                 </ul>
             </nav>
-            <div class="player-select-toggle">
-
+            <div class="toggle-wrapper">
+                <input type="checkbox" name="player-toggle" id="player-toggle">
+                <label for="player-toggle"></label>
             </div>
         </div>
 
