add text to toggle

--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
                 </ul>
             </nav>
             <div class="toggle-wrapper">
-                <input type="checkbox" name="player-toggle" id="player-toggle">
-                <label for="player-toggle"></label>
+                <h6 id="span-toggle-left">Player One</h6>
+                <div class="switch-wrapper">
+                    <input type="checkbox" name="player-toggle" id="player-toggle">
+                    <label for="player-toggle"></label>
+                </div>
+                    <h6 id="span-toggle-right">Player Two</h6>
             </div>
         </div>
 
@@ -37,11 +41,11 @@
     <div class="player-container">
         <section id="player-side-left" class="player-side">
             <h1 id="left-player-name"></h1>
-            <h6 id="left-player-alias"></h6>
+            <h5 id="left-player-alias"></h5>
         </section>
         <section id="player-side-right" class="player-side">
             <h1 id="right-player-name"></h1>
-            <h6 id="right-player-alias"></h6>
+            <h5 id="right-player-alias"></h5>
         </section>
     </div>
     
