replaced lock function with toggle function

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
                 </ul>
             </nav>
             <div class="toggle-wrapper">
-                <h6 id="span-toggle-left">PLAYER 1</h6>
+                <h6 id="h6-toggle-left">PLAYER 1</h6>
                 <div class="switch-wrapper">
                     <input type="checkbox" name="player-toggle" id="player-toggle">
                     <label for="player-toggle"></label>
                 </div>
-                    <h6 id="span-toggle-right">PLAYER 2</h6>
+                    <h6 id="h6-toggle-right">PLAYER 2</h6>
             </div>
         </div>
 
