--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.5.1/dist/chart.min.js"></script>
     <script src="https://kit.fontawesome.com/8d252ac46c.js" crossorigin="anonymous"></script>
     <script src="./dist/main.js"></script>
     <title>Versus</title>
@@ -21,6 +22,10 @@
         <header>
             <h2>VERSUS</h2>
         </header>
+
+        <div class="chart-container">
+            <canvas id="chart"></canvas>
+        </div>
 
         <div class="player-select-wrapper">
             <nav class="player-select">
