--- a/index.html
+++ b/index.html
@@ -28,19 +28,37 @@
             <canvas id="chart"></canvas>
         </div>
 
-        <div class="player-select-wrapper">
-            <nav class="player-select">
-                <ul id="ul-player-select">
-                </ul>
-            </nav>
-            <div class="toggle-wrapper">
-                <h6 id="h6-toggle-left">PLAYER 1</h6>
-                <div class="switch-wrapper">
-                    <input type="checkbox" name="player-toggle" id="player-toggle">
-                    <label for="player-toggle"></label>
+        <div class="flex-box-row">
+
+            <aside id="aside-left">
+                <blockquote id="aside-left-blockquote">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua.
+                </blockquote>
+            </aside>
+
+            <div class="player-select-wrapper">
+                <nav class="player-select">
+                    <ul id="ul-player-select">
+                    </ul>
+                </nav>
+                <div class="toggle-wrapper">
+                    <h6 id="h6-toggle-left">PLAYER 1</h6>
+                    <div class="switch-wrapper">
+                        <input type="checkbox" name="player-toggle" id="player-toggle">
+                        <label for="player-toggle"></label>
+                    </div>
+                        <h6 id="h6-toggle-right">PLAYER 2</h6>
                 </div>
-                    <h6 id="h6-toggle-right">PLAYER 2</h6>
             </div>
+
+            <aside id="aside-right">
+                <blockquote id="aside-right-blockquote">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua.
+                </blockquote>
+            </aside>
+
         </div>
 
     </div>
