begin adding footer

--- a/index.html
+++ b/index.html
@@ -19,24 +19,19 @@
 <body>
 
     <div class="flex-box-col">
-
         <header>
             <h2>VERSUS</h2>
         </header>
-
         <div class="chart-container">
             <canvas id="chart"></canvas>
         </div>
-
         <div class="flex-box-row">
-
             <aside id="aside-left">
                 <blockquote id="aside-left-blockquote">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                     aliqua.
                 </blockquote>
             </aside>
-
             <div class="player-select-wrapper">
                 <nav class="player-select">
                     <ul id="ul-player-select">
@@ -50,15 +45,19 @@
                     </div>
                         <h6 id="h6-toggle-right">PLAYER 2</h6>
                 </div>
+                <footer>
+                    <i class="fas fa-info-circle"></i>
+                    <a href="https://www.linkedin.com/in/jon-zamora-97a8a6219/"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://github.com/jayzizzle"><i class="fab fa-github-square"></i></a>
+                    <a href="https://www.mixcloud.com/jonzamora/"><i class="fas fa-compact-disc"></i></a>
+                </footer>
             </div>
-
             <aside id="aside-right">
                 <blockquote id="aside-right-blockquote">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                     aliqua.
                 </blockquote>
             </aside>
-
         </div>
 
     </div>
