update for test deployment

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" href="src/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="src/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="src/images/favicon-16x16.png">
     <link rel="stylesheet" href="./src/styles/reset.css" />
     <link rel="stylesheet" href="./dist/main.css" />
     <link rel="stylesheet" href="./src/styles/style.css" />
@@ -46,10 +49,15 @@
                         <h6 id="h6-toggle-right">PLAYER 2</h6>
                 </div>
                 <footer>
-                    <i class="fas fa-info-circle"></i>
-                    <a href="https://www.linkedin.com/in/jon-zamora-97a8a6219/"><i class="fab fa-linkedin"></i></a>
-                    <a href="https://github.com/jayzizzle"><i class="fab fa-github-square"></i></a>
-                    <a href="https://www.mixcloud.com/jonzamora/"><i class="fas fa-compact-disc"></i></a>
+                    <i class="tooltip fas fa-info-circle">
+                        <span class="tooltiptext">
+                            Data was collected from the following websites: wikipedia.com, billboard.com, & grammy.com. 
+                            *Platinum albums and singles were only counted if the artist was the lead.
+                        </span>
+                    </i>
+                    <a href="https://www.linkedin.com/in/jon-zamora-97a8a6219/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://github.com/jayzizzle" target="_blank"><i class="fab fa-github-square"></i></a>
+                    <a href="https://www.mixcloud.com/jonzamora/" target="_blank"><i class="fas fa-compact-disc"></i></a>
                 </footer>
             </div>
             <aside id="aside-right">
