add minor details to toggle

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 </blockquote>
             </aside>
             <div class="player-select-wrapper">
+                <h3 id="versus-select" class="lightcoral">versus</h3>
                 <nav class="player-select">
                     <ul id="ul-player-select">
                     </ul>
