upload album art

--- a/index.html
+++ b/index.html
@@ -25,10 +25,14 @@
     
     <div class="flex-box-col">
         <header>
-            <h2>versus</h2>
+            <h2>All Eyez On Me // Life After Death</h2>
         </header>
-        <div class="chart-container">
-            <canvas id="chart" width="700" height="400"></canvas>
+        <div class="flex-box-middle-row">
+            <h3></h3>
+            <div class="chart-container">
+                <canvas id="chart" width="700" height="400"></canvas>
+            </div>
+            <h3></h3>
         </div>
         
         <div class="flex-box-row">
