clean up commented out code

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     
     <div class="flex-box-col">
         <header>
-            <h2>All Eyez On Me // Life After Death</h2>
+            <h2>VERSUS PROJECT</h2> <!-- THIS IS HIDDEN -->
         </header>
         <div class="flex-box-middle-row">
             <h3></h3>
